@@ -15,6 +15,9 @@
 
 	* avatar-sdl.c (avt_choice): use only avt_key() for input
 
+	* avatar-sdl.c (avt_check_buttons): returns boolean
+	(avt_analyze_event): adapted
+
 2012-09-24  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.h, audio-sdl.c, audio-dummy.c (avt_set_audio_end_key):
